--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </li>
       </ul>
     </nav>
-    <!-- about section-->
+    <!-- aabout section-->
     <section class="about ">
       <div class="revealOnScroll " data-animation="bounceIn ">ABOUT</div>
     </section>
