--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-  <script src="https://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
-  <script src="main.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="plugins/aos/aos.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+
+
 </head>
 
 <body>
@@ -56,9 +55,15 @@
     </nav>
     <!-- about section-->
     <section class="about ">
-      <div class="revealOnScroll " data-animation="bounceIn ">ABOUT</div>
+      <div class="about__header" data-aos="fade-in" id="blah">ABOUT
+      </div>
+
     </section>
+    <div class="about__header" data-aos="fade-up">ABOUT</div>
   </div>
+  <script src="plugins/aos/aos.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+  <script src="main.js"></script>
 </body>
 
 
