--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
     </nav>
     <!-- about section-->
     <section class="about ">
-      <div class="about__header" data-aos="fade-in" id="blah">ABOUT
+      <div class="text--black about__header" data-aos="slide-right" id="aboutText">ABOUT
       </div>
-
     </section>
-    <div class="about__header" data-aos="fade-up">ABOUT</div>
   </div>
   <script src="plugins/aos/aos.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
