--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </section>
 
     </div>
+    <!-- navigation bar -->
     <nav class="navbar">
       <ul>
         <li class="navbar__item">
