edited comment in html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- testing gitlab auto dev-->
+<!-- testing gitlab auto dev hmm doesn't test unless master?-->
 
 <head>
   <meta charset="utf-8" />
