--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="plugins/aos/aos.css">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 
 </head>
 
@@ -22,7 +22,6 @@
     <div class="splash">
 
       <section>
-
         <div class="splash__text block__text--center">
           Hello, I'm
           <span class="splash__text splash__text__span--pink">
@@ -32,18 +31,20 @@
         <div class="splash__text splash__text--padding">
           A full-stack web developer
         </div>
-        <div class="splash__button">
-          <div class="splash__button__text">
-            View my work
+        <!-- Click Box -->
+        <a href="#myanchor">
+          <div class="splash__button">
+            <div class="splash__button__text">
+              View my work
+            </div>
+            <div id="arrow" class="splash__button__arrow">-></div>
           </div>
-          <div id="arrow" class="splash__button__arrow">-></div>
-        </div>
-
+        </a>
       </section>
-
     </div>
     <!-- navigation bar -->
     <nav class="navbar">
+      <a name="myanchor"></a>
       <ul>
         <li class="navbar__item">
           <a href="#home" class=" navbar__item__anchor ">HOME</a>
@@ -69,6 +70,12 @@
         </div>
       </div>
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center" aos-delay="500" />
+      <div class="about__container">
+        <div class="about__container__item1">item 1</div>
+        <div class="about__container__item1">item 1</div>
+        <div class="about__container__item1">item 1</div>
+        <div class="about__container__item1">item 1</div>
+      </div>
     </section>
   </div>
   <script src="plugins/aos/aos.js "></script>
