--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
       </div>
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center" aos-delay="500" />
       <div class="about__container">
-        <div class="about__container__item1">item 1</div>
+        <div class="about__container__item1" data-aos="fade-in">
+          <img src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image">
+          <article>
+            <h3 class="about__container_item1__title">Fast</h3>
+            <p class="about__container_item1__title">Fast load times and lag free interaction, my highest priority.</p>
+          </article>
+        </div>
         <div class="about__container__item1">item 1</div>
         <div class="about__container__item1">item 1</div>
         <div class="about__container__item1">item 1</div>
