--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </li>
       </ul>
     </nav>
-    <!-- about section -->
+    <!-- about sectionn -->
     <section class="about">
       <div class="about__box">
         <div class="text--black about__header" data-aos="fade-right" data-aos-anchor-placement="top-bottom">ABOUT
