--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Portfolio</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="reset.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="plugins/aos/aos.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-
 </head>
 
 <body>
