--- a/index.html
+++ b/index.html
@@ -72,35 +72,49 @@
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
       <div class="about__container">
         <div class="about__container__item1">
-          <img data-aos="flip-right" data-aos-delay="100" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image">
+          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="100">
+            <img class="octagon__box__image" src="./images/monitor.png" style="height: 50%; width: 50%;" alt="">
+          </div>
+          <!-- <img data-aos="flip-right" data-aos-delay="100" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image"> -->
           <article data-aos="fade-in" data-aos-delay="100" data-aos-offset "160">
             <h3 class="about__container_item1__title text__h3--black">Fast</h3>
             <p class="about__container_item1__title">Fast load times and lag free interaction, my highest priority.</p>
           </article>
         </div>
         <div class="about__container__item1">
-          <img data-aos="flip-right" data-aos-delay="400" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image">
+          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="400">
+            <img class="octagon__box__image" src="./images/response.png" style="height: 50%; width: 50%;" alt="">
+          </div>
+          <!-- <img data-aos="flip-right" data-aos-delay="400" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image"> -->
           <article data-aos="fade-in" data-aos-delay="400" data-aos-offset "160">
             <h3 class="about__container_item1__title text__h3--black">Responsive</h3>
             <p class="about__container_item1__title">My layouts will work on any device, big or small.</p>
           </article>
         </div>
         <div class="about__container__item1">
-          <img data-aos="flip-right" data-aos-delay="650" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image">
+          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="650">
+            <img class="octagon__box__image" src="./images/intuitive.png" style="height: 50%; width: 50%;" alt="">
+          </div>
+          <!-- <img data-aos="flip-right" data-aos-delay="650" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image"> -->
           <article data-aos="fade-in" data-aos-delay="650" data-aos-offset "160">
             <h3 class="about__container_item1__title text__h3--black">Intuitive</h3>
             <p class="about__container_item1__title">Strong preference for easy to use, intuitive UX/UI.</p>
           </article>
         </div>
         <div class="about__container__item1">
-          <img data-aos="flip-right" data-aos-delay="900" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image">
+
+          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="900">
+            <img class="octagon__box__image" src="./images/bullhorn.png" style="height: 50%; width: 50%;" alt="">
+          </div>
+          <!-- <img data-aos="flip-right" data-aos-delay="900" src="./images/hexagon-xxl.png" alt="octagon" class="about__octagon__image"> -->
           <article data-aos="fade-in" data-aos-delay="900" data-aos-offset "160">
             <h3 class="about__container_item1__title text__h3--black">Dynamic</h3>
             <p class="about__container_item1__title" class='text--black'>Websites don't have to be static, I love making pages come to life.</p>
           </article>
         </div>
       </div>
-    </section>
+  </div>
+  </section>
   </div>
   <script src="plugins/aos/aos.js "></script>
   <script type="text/javascript">
