--- a/index.html
+++ b/index.html
@@ -71,46 +71,56 @@
       </div>
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
       <div class="about__container">
-        <div class="about__container__item1">
+        <!-- hex with monitor -->
+        <div class="about__container__item1 item--a">
           <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="100">
             <img class="octagon__box__image" src="./images/monitor.png" style="height: 50%; width: 50%;" alt="">
           </div>
-          <!-- <img data-aos="flip-right" data-aos-delay="100" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image"> -->
           <article data-aos="fade-in" data-aos-delay="100" data-aos-offset "160">
-            <h3 class="about__container_item1__title text__h3--black">Fast</h3>
-            <p class="about__container_item1__title">Fast load times and lag free interaction, my highest priority.</p>
+            <h3 class="about__container_item1__title text__h3--black">Integration</h3>
+            <p class="about__container_item1__title">Using standards and best practices to speed up development and debugging.</p>
           </article>
         </div>
-        <div class="about__container__item1">
+        <!-- hex with bulb -->
+        <div class="about__container__item1 item--b">
           <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="400">
-            <img class="octagon__box__image" src="./images/response.png" style="height: 50%; width: 50%;" alt="">
-          </div>
-          <!-- <img data-aos="flip-right" data-aos-delay="400" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image"> -->
-          <article data-aos="fade-in" data-aos-delay="400" data-aos-offset "160">
-            <h3 class="about__container_item1__title text__h3--black">Responsive</h3>
-            <p class="about__container_item1__title">My layouts will work on any device, big or small.</p>
-          </article>
-        </div>
-        <div class="about__container__item1">
-          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="650">
             <img class="octagon__box__image" src="./images/intuitive.png" style="height: 50%; width: 50%;" alt="">
           </div>
-          <!-- <img data-aos="flip-right" data-aos-delay="650" src="./images/hexagon-xxl.png" alt="onctagon" class="about__octagon__image"> -->
-          <article data-aos="fade-in" data-aos-delay="650" data-aos-offset "160">
-            <h3 class="about__container_item1__title text__h3--black">Intuitive</h3>
-            <p class="about__container_item1__title">Strong preference for easy to use, intuitive UX/UI.</p>
+          <article data-aos="fade-in" data-aos-delay="400" data-aos-offset "160">
+            <h3 class="about__container_item1__title text__h3--black">Resolve</h3>
+            <p class="about__container_item1__title">Full stack experience means I can tackle all development aspects of a project.</p>
           </article>
         </div>
-        <div class="about__container__item1">
-
-          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="900">
+        <!-- hex with bullhorn -->
+        <div class="about__container__item1 item--c">
+          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="650">
             <img class="octagon__box__image" src="./images/bullhorn.png" style="height: 50%; width: 50%;" alt="">
           </div>
-          <!-- <img data-aos="flip-right" data-aos-delay="900" src="./images/hexagon-xxl.png" alt="octagon" class="about__octagon__image"> -->
-          <article data-aos="fade-in" data-aos-delay="900" data-aos-offset "160">
-            <h3 class="about__container_item1__title text__h3--black">Dynamic</h3>
-            <p class="about__container_item1__title" class='text--black'>Websites don't have to be static, I love making pages come to life.</p>
+          <article data-aos="fade-in" data-aos-delay="650" data-aos-offset "160">
+            <h3 class="about__container_item1__title text__h3--black">Communication</h3>
+            <p class="about__container_item1__title" class='text--black'>A priority to communicate with my team allows for accelerated success.</p>
           </article>
+        </div>
+        <!-- hex with clock -->
+        <div class="about__container__item1 item--d">
+          <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="900">
+            <img class="octagon__box__image" src="./images/response.png" style="height: 50%; width: 50%;" alt="">
+          </div>
+          <article data-aos="fade-in" data-aos-delay="900" data-aos-offset "160">
+            <h3 class="about__container_item1__title text__h3--black">Responsive</h3>
+            <p class="about__container_item1__title">Utilizing the latest tools and frameworks to maximize responsiveness on all devices.</p>
+          </article>
+        </div>
+        <div class="item--e">
+          <img data-aos="fade-right" data-aos-delay="400" data-aos-offset "160" class="mypic" src="./images/editedme.jpg" alt="mypic">
+        </div>
+        <div class="item--f">
+          <h3 data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="about__container_bio__title text__h3--black">Who is Mark?</h3>
+          <p data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="about__container_bio__paragraph text--black">
+            A MERN Full-Stack Web Developer who has a passion for building new digital products. I am constantly excited when I learn
+            how to use new tools because of the possibilities it unlocks for me. I love sharing my knowledge and knowing
+            that I have saved somebody on my team time and struggle. My greatest goal in life is to contribute to a project
+            that enhances peoples lives across the world. </p>
         </div>
       </div>
   </div>
