--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- navigation bar -->
     <nav class="navbar">
       <a name="myanchor"></a>
-      <ul>
+      <ul class="navbar__ul">
         <li class="navbar__item">
           <a href="#home" class=" navbar__item__anchor ">HOME</a>
         </li>
@@ -62,8 +62,30 @@
           <a href="#home" class=" navbar__item__anchor ">CONTACT</a>
         </li>
       </ul>
+      <section class="navbar__section__icon-Box">
+        <div></div>
+        <div></div>
+        <div>
+          <a href="https://gitlab.com/mark_hinojosa">
+            <img src="./images/gitlab.png" alt="" class="navbar__gitlab__icon">
+          </a>
+
+
+        </div>
+
+        <!-- </div>
+  <div class="github__box">
+    <a href="https://github.com/MarkHinojosa">
+      <img src="./images/github.png" alt="" class="navbar__github__icon">
+    </a>
+  </div>
+  <div class="github__box">
+    <a href="https://www.linkedin.com/in/mark-hinojosa-78a181147/">
+      <img src="./images/linkedin.png" alt="" class="navbar__linkedin__icon">
+    </a> -->
+      </section>
     </nav>
-    <!-- about sectionn -->
+    <!-- about section -->
     <section class="about">
       <div class="about__box">
         <div class="text--black about__header" data-aos="fade-right" data-aos-anchor-placement="top-bottom">ABOUT
