--- a/index.html
+++ b/index.html
@@ -62,27 +62,22 @@
           <a href="#home" class=" navbar__item__anchor ">CONTACT</a>
         </li>
       </ul>
+      <!-- breaks remaining area of navbar into grid -->
       <section class="navbar__section__icon-Box">
         <div></div>
         <div></div>
+        <!-- right grid section of navbar contains icons within -->
         <div>
           <a href="https://gitlab.com/mark_hinojosa">
-            <img src="./images/gitlab.png" alt="" class="navbar__gitlab__icon">
+            <img data-aos="fade-in" data-aos-delay="100" data-aos-offset "50" src="./images/gitlab.png" alt="" class="navbar__gitlab__icon">
           </a>
-
-
+          <a href="https://github.com/MarkHinojosa">
+            <img data-aos="fade-in" data-aos-delay="100" data-aos-offset "50" src="./images/github.png" alt="" class="navbar__github__icon">
+          </a>
+          <a class="icon__anchor" href="https://www.linkedin.com/in/mark-hinojosa-78a181147/">
+            <img data-aos="fade-in" data-aos-delay="100" data-aos-offset "50" src="./images/linkedin.png" alt="" class="navbar__linkedin__icon">
+          </a>
         </div>
-
-        <!-- </div>
-  <div class="github__box">
-    <a href="https://github.com/MarkHinojosa">
-      <img src="./images/github.png" alt="" class="navbar__github__icon">
-    </a>
-  </div>
-  <div class="github__box">
-    <a href="https://www.linkedin.com/in/mark-hinojosa-78a181147/">
-      <img src="./images/linkedin.png" alt="" class="navbar__linkedin__icon">
-    </a> -->
       </section>
     </nav>
     <!-- about section -->
