added git project

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   </canvas> -->
   <div class="wrapper">
     <div class="splash">
-
       <section>
         <div class="splash__text block__text--center">
           Hello, I'm
@@ -32,7 +31,7 @@
           A full-stack web developer
         </div>
         <!-- Click Box -->
-        <a href="#myanchor">
+        <a href="#navAnchor">
           <div class="splash__button">
             <div class="splash__button__text">
               View my work
@@ -44,16 +43,16 @@
     </div>
     <!-- navigation bar -->
     <nav class="navbar">
-      <a name="myanchor"></a>
+      <a name="navAnchor"></a>
       <ul class="navbar__ul">
         <li class="navbar__item">
           <a href="#home" class=" navbar__item__anchor ">HOME</a>
         </li>
         <li class="navbar__item ">
-          <a href="#home " class=" navbar__item__anchor">ABOUT</a>
+          <a href="#aboutAnchor" class=" navbar__item__anchor">ABOUT</a>
         </li>
         <li class="navbar__item">
-          <a href="#home" class=" navbar__item__anchor ">PORTFOLIO</a>
+          <a href="#portfolioAnchor" class=" navbar__item__anchor ">PORTFOLIO</a>
         </li>
         <li class="navbar__item ">
           <a href="#home " class=" navbar__item__anchor">BLOG</a>
@@ -82,6 +81,7 @@
     </nav>
     <!-- about section -->
     <section class="about">
+      <a name="aboutAnchor"></a>
       <div class="about__box">
         <div class="text--black about__header" data-aos="fade-right" data-aos-anchor-placement="top-bottom">ABOUT
         </div>
@@ -140,8 +140,32 @@
             that enhances peoples lives across the world. </p>
         </div>
       </div>
+    </section>
+    <!-- projects section -->
+    <section class="projects">
+      <a name="portfolioAnchor"></a>
+      <div class="about__box">
+        <div class="text--black about__header" data-aos="fade-right" data-aos-anchor-placement="top-bottom">Projects
+        </div>
+      </div>
+      <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
+      <div class="projects__container">
+        <a href="https://gormangit.github.io/Big-Kahuna-1/">
+          <div class="item--h">
+          </div>
+        </a>
+        <div class="item--i">
+          <!-- <img src="./images/memoryMatch.png" alt="memoryMatch" class="project__image"> -->
+        </div>
+        <div class="item--j">
+          <!-- <img src="./images/memoryMatch.png" alt="memoryMatch" class="project__image"> -->
+        </div>
+        <div class="item--k">
+          <!-- <img src="./images/memoryMatch.png" alt="memoryMatch" class="project__image"> -->
+        </div>
+      </div>
+    </section>
   </div>
-  </section>
   </div>
   <script src="plugins/aos/aos.js "></script>
   <script type="text/javascript">
