added all projects

--- a/index.html
+++ b/index.html
@@ -151,18 +151,22 @@
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
       <div class="projects__container">
         <a href="https://gormangit.github.io/Big-Kahuna-1/">
-          <div class="item--h">
+          <div data-aos="fade-up" data-aos-delay="200" data-aos-offset "50" class="item--h">
           </div>
         </a>
-        <div class="item--i">
-          <!-- <img src="./images/memoryMatch.png" alt="memoryMatch" class="project__image"> -->
-        </div>
-        <div class="item--j">
-          <!-- <img src="./images/memoryMatch.png" alt="memoryMatch" class="project__image"> -->
-        </div>
-        <div class="item--k">
-          <!-- <img src="./images/memoryMatch.png" alt="memoryMatch" class="project__image"> -->
-        </div>
+        <a href="https://markhinojosa.github.io/web-workbook/02week/blog/index.html">
+          <div data-aos="fade-up" data-aos-delay="300" data-aos-offset "50" class="item--i">
+          </div>
+        </a>
+        <a href="https://raceofrobots.github.io/#A">
+          <div data-aos="fade-up" data-aos-delay="500" data-aos-offset "50" class="item--j">
+          </div>
+        </a>
+        <a href="https://github.com/MarkHinojosa/project-seed">
+          <div data-aos="fade-up" data-aos-delay="600" data-aos-offset "50" class="item--k">
+          </div>
+        </a>
+
       </div>
     </section>
   </div>
