--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
       </div>
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
       <div class="projects__container">
-        <a id="item__h__anchor" href="https://gormangit.github.io/Big-Kahuna-1/">
+        <a id="test" id="item__h__anchor" href="https://gormangit.github.io/Big-Kahuna-1/">
           <div data-aos="fade-up" data-aos-delay="200" data-aos-offset "50" class="projects__container__item__h">
-            <div id="test" class="projects__container__item__h__text">blah blah</div>
+            <div id="item__h__innertext" class="projects__container__item__h__text">hello</div>
           </div>
         </a>
         <a href="https://markhinojosa.github.io/web-workbook/02week/blog/index.html">
