--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="plugins/aos/aos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/imagehover.css/1.0/css/imagehover.min.css">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 </head>
 
@@ -151,30 +152,59 @@
         </div>
       </div>
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
+      <!-- PROJECTS GRID CONTAINER -->
       <div class="projects__container">
-        <a id="test" id="item__h__anchor" href="https://gormangit.github.io/Big-Kahuna-1/">
-          <div data-aos="fade-up" data-aos-delay="200" data-aos-offset "50" class="projects__container__item__h">
-            <div id="item__h__innertext" class="projects__container__item__h__text">hello</div>
-          </div>
-        </a>
-        <a href="https://markhinojosa.github.io/web-workbook/02week/blog/index.html">
-          <div data-aos="fade-up" data-aos-delay="300" data-aos-offset "50" class="item--i">
-          </div>
-        </a>
-        <a href="https://raceofrobots.github.io/#A">
-          <div data-aos="fade-up" data-aos-delay="500" data-aos-offset "50" class="item--j">
-          </div>
-        </a>
-        <a href="https://github.com/MarkHinojosa/project-seed">
-          <div data-aos="fade-up" data-aos-delay="600" data-aos-offset "50" class="item--k">
-          </div>
-        </a>
+        <!-- ENTIRE TOP LEFT BOX (H) && FADE-UP STYLING  -->
+        <div class="item--h" data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-center">
+          <!-- CONTENT OF TOP LEFT BOX && HOVER STYLING -->
+          <figure class="imghvr-fade" style="height: 100%; width: 100%;">
+            <img style="height: 100%; width: 100%;" src="./images/memoryMatch.png">
+            <figcaption style="background-color:#f5f5f5; color: black;">
+              <h3 style="color:black">Memory Game</h3>
+              <p>React.js, Semantic-Ui</p>
+            </figcaption>
+            <a href="https://gormangit.github.io/Big-Kahuna-1/" style="object-fit: contain; height: 100%;"></a>
+          </figure>
+        </div>
+        <!-- ENTIRE TOP RIGHT BOX (I) && FADE-UP STYLING  -->
+        <div class="item--i" data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="top-center">
+          <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
+          <figure class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
+            <img style="height: 100%; width: 100%; background-color:#f5f5f5; color: black;" src="./images/blog.png">
+            <figcaption style="background-color:#f5f5f5; color: black;">
+              Memory Game - React.js, Ajax
+            </figcaption>
+            <a href="https://markhinojosa.github.io/web-workbook/02week/blog/index.html" style="object-fit: contain; height: 100%;"></a>
+          </figure>
+        </div>
+        <!-- ENTIRE BOTTOM LEFT BOX (J) && FADE-UP STYLING  -->
+        <div class="item--j" data-aos="fade-up" data-aos-delay="500">
+          <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
+          <figure class="imghvr-fade">
+            <img style="height: 100%; width: 100%;" src="./images/fate.png">
+            <figcaption style="background-color:#f5f5f5; color: black;">
+              Memory Game - React.js, Ajax
+            </figcaption>
+            <a href="https://raceofrobots.github.io/#A" style="object-fit: contain; height: 100%;"></a>
+          </figure>
+        </div>
+        <!-- ENTIRE BOTTOM LEFT BOX (K) && FADE-UP STYLING  -->
+        <div class="item--k" data-aos="fade-up" data-aos-delay="600">
+          <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
+          <figure class="imghvr-fade">
+            <img style="height: 100%; width: 100%;" src="./images/project-seed.png">
+            <figcaption style="background-color:#f5f5f5; color: black;">
+              Memory Game - React.js, Ajax
+            </figcaption>
+            <a href="https://github.com/MarkHinojosa/project-seed" style="object-fit: contain; height: 100%;"></a>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
   </div>
   <script src="plugins/aos/aos.js "></script>
-  <script type="text/javascript">
+  <script type="text/javascript ">
     AOS.init({
       offset: 200,
       duration: 800,
