edited text content of project-seed

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         <div></div>
         <!-- right grid section of navbar contains icons within -->
         <div>
-          <a href="https://gitlab.com/mark_hinojosa">
+          <a class="icons" href="https://gitlab.com/mark_hinojosa">
             <img data-aos="fade-in" data-aos-delay="100" data-aos-offset "50" src="./images/gitlab.png" alt="" class="navbar__gitlab__icon">
           </a>
-          <a href="https://github.com/MarkHinojosa">
+          <a class="icons" href="https://github.com/MarkHinojosa">
             <img data-aos="fade-in" data-aos-delay="100" data-aos-offset "50" src="./images/github.png" alt="" class="navbar__github__icon">
           </a>
-          <a class="icon__anchor" href="https://www.linkedin.com/in/mark-hinojosa-78a181147/">
+          <a class="icon__anchor icons" href="https://www.linkedin.com/in/mark-hinojosa-78a181147/">
             <img data-aos="fade-in" data-aos-delay="100" data-aos-offset "50" src="./images/linkedin.png" alt="" class="navbar__linkedin__icon">
           </a>
         </div>
@@ -160,8 +160,13 @@
           <figure class="imghvr-fade" style="height: 100%; width: 100%;">
             <img style="height: 100%; width: 100%;" src="./images/memoryMatch.png">
             <figcaption style="background-color:#f5f5f5; color: black;">
-              <h3 style="color:black">Memory Game</h3>
-              <p>React.js, Semantic-Ui</p>
+              <h3 style="
+                color: black;
+                text-align: center;">Memory Game</h3>
+              <br>
+              <p style="
+                color: black;
+                text-align: center;">Find the pair - React.js, Semantic-UI</p>
             </figcaption>
             <a href="https://gormangit.github.io/Big-Kahuna-1/" style="object-fit: contain; height: 100%;"></a>
           </figure>
@@ -172,7 +177,13 @@
           <figure class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
             <img style="height: 100%; width: 100%; background-color:#f5f5f5; color: black;" src="./images/blog.png">
             <figcaption style="background-color:#f5f5f5; color: black;">
-              Memory Game - React.js, Ajax
+              <h3 style="
+                color: black;
+                text-align: center;">My Blog</h3>
+              <br>
+              <p style="
+                color: black;
+                text-align: center;">Web Blog - HTML, CSS</p>
             </figcaption>
             <a href="https://markhinojosa.github.io/web-workbook/02week/blog/index.html" style="object-fit: contain; height: 100%;"></a>
           </figure>
@@ -183,7 +194,13 @@
           <figure class="imghvr-fade">
             <img style="height: 100%; width: 100%;" src="./images/fate.png">
             <figcaption style="background-color:#f5f5f5; color: black;">
-              Memory Game - React.js, Ajax
+              <h3 style="
+                color: black;
+                text-align: center;">A Boy's Fate</h3>
+              <br>
+              <p style="
+                color: black;
+                text-align: center;">Web RPG - HTML, CSS</p>
             </figcaption>
             <a href="https://raceofrobots.github.io/#A" style="object-fit: contain; height: 100%;"></a>
           </figure>
@@ -194,7 +211,20 @@
           <figure class="imghvr-fade">
             <img style="height: 100%; width: 100%;" src="./images/project-seed.png">
             <figcaption style="background-color:#f5f5f5; color: black;">
-              Memory Game - React.js, Ajax
+              <h3 style="
+              font-size: 20pt;
+              color: black;
+              text-align: center;">Project Seed</h3>
+              <br>
+              <p style="
+              font-size: 16pt;
+              color: black;
+              text-align: center;">Knowledge sharing platform </p>
+              <p style="
+              font-weight: bold;
+              font-size: 16pt;
+              color: black;
+              text-align: center;"> React.js, MongoDB, Express.js, Router, Redux</p>
             </figcaption>
             <a href="https://github.com/MarkHinojosa/project-seed" style="object-fit: contain; height: 100%;"></a>
           </figure>
