added comment to reader

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <!-- Hello, thanks for taking a look at my portfolio.. It is a work in progress and will be updated as my skills grow-->
+<!-- CONTACT ME AT MARKHINOJOSA1212@GMAIL.COM -->
 
 <head>
   <meta charset="utf-8" />
