--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <!-- Hello, thanks for taking a look at my portfolio.. It is a work in progress and will be updated as my skills grow-->
-<!-- CONTACT ME AT MARKHINOJOSA1212@GMAIL.COM -->
+<!-- FOR ANY QUESTIONS OR COLLABORATION PLEASE CONTACT ME AT MARKHINOJOSA1212@GMAIL.COM -->
 
 <head>
   <meta charset="utf-8" />
