--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <!-- Hello, thanks for taking a look at my portfolio.. It is a work in progress and will be updated as my skills grow-->
-<!-- FOR ANY QUESTIONS OR COLLABORATION PLEASE CONTACT ME AT MARKHINOJOSA1212@GMAIL.COM -->
+<!-- FOR ANY QUESTIONS PLEASE CONTACT ME AT MARKHINOJOSA1212@GMAIL.COM -->
 
 <head>
   <meta charset="utf-8" />
@@ -18,8 +18,7 @@
 </head>
 
 <body>
-  <a name="homeAnchor"></a>
-  
+  <a name="homeAnchor"></a> 
     <div class="wrapper">
         <canvas id="canvas" width="150" height="150"></canvas>
       <div class="splash">
