edited styling of box contents

--- a/index.html
+++ b/index.html
@@ -194,12 +194,15 @@
           <img style="height: 100%; width: 100%;" src="./images/fate.png">
           <figcaption style="background-color:#f5f5f5; color: black;">
             <h3 style="
-                color: black;
-                text-align: center;">A Boy's Fate</h3>
+            font-weight: bold;
+            font-size: 16pt;
+            color: black;
+            text-align: center;">Boy's Fate</h3>
             <br>
             <p style="
-                color: black;
-                text-align: center;">Web RPG - HTML, CSS</p>
+            font-size: 14pt;
+            color: black;
+            text-align: center;">Web RPG - HTML, CSS</p>
           </figcaption>
           <a href="https://raceofrobots.github.io/#A" style="object-fit: contain; height: 100%;"></a>
         </figure>
