--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="octagon__box" style="height: 100px; width:100px;" data-aos="flip-right" data-aos-delay="100">
           <img class="octagon__box__image" src="./images/monitor.png" style="height: 50%; width: 50%;" alt="">
         </div>
-        <article data-aos="fade-in" data-aos-delay="100" data-aos-offset "160">
+        <article data-aos="fade-in" data-aos-delay="100" data-aos-offset "0">
           <h3 class="about__container_item1__title text__h3--black">Integration</h3>
           <p class="about__container_item1__title">Using standards and best practices to speed up development and debugging.</p>
         </article>
@@ -159,13 +159,8 @@
         <figure class="imghvr-fade" style="height: 100%; width: 100%;">
           <img style="height: 100%; width: 100%;" src="./images/memoryMatch.png">
           <figcaption style="background-color:#f5f5f5; color: black;">
-            <h3 style="
-                color: black;
-                text-align: center;">Memory Game</h3>
-            <br>
-            <p style="
-                color: black;
-                text-align: center;">Find the pair - React.js, Semantic-UI</p>
+            <h3 class="projects__container__content__h3">Memory Game</h3>
+            <p class="projects__container__content__p">React.js, Semantic-UI</p>
           </figcaption>
           <a href="https://markhinojosa.github.io/Big-Kahuna/" style="object-fit: contain; height: 100%;"></a>
         </figure>
@@ -176,13 +171,8 @@
         <figure class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
           <img style="height: 100%; width: 100%; background-color:#f5f5f5; color: black;" src="./images/blog.png">
           <figcaption style="background-color:#f5f5f5; color: black;">
-            <h3 style="
-                color: black;
-                text-align: center;">My Blog</h3>
-            <br>
-            <p style="
-                color: black;
-                text-align: center;">Web Blog - HTML, CSS</p>
+            <h3 class="projects__container__content__h3">My Blog</h3>
+            <p class="projects__container__content__p">HTML, CSS</p>
           </figcaption>
           <a href="https://markhinojosa.github.io/web-workbook/02week/blog/index.html" style="object-fit: contain; height: 100%;"></a>
         </figure>
@@ -190,19 +180,11 @@
       <!-- ENTIRE BOTTOM LEFT BOX (J) && FADE-UP STYLING  -->
       <div class="item--j" data-aos="fade-up" data-aos-delay="500">
         <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
-        <figure class="imghvr-fade">
+        <figure  class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
           <img style="height: 100%; width: 100%;" src="./images/fate.png">
           <figcaption style="background-color:#f5f5f5; color: black;">
-            <h3 style="
-            font-weight: bold;
-            font-size: 16pt;
-            color: black;
-            text-align: center;">Boy's Fate</h3>
-            <br>
-            <p style="
-            font-size: 14pt;
-            color: black;
-            text-align: center;">Web RPG - HTML, CSS</p>
+            <h3 class="projects__container__content__h3">Boy's Fate</h3>
+            <p class="projects__container__content__p">HTML, CSS</p>
           </figcaption>
           <a href="https://raceofrobots.github.io/#A" style="object-fit: contain; height: 100%;"></a>
         </figure>
@@ -210,30 +192,35 @@
       <!-- ENTIRE BOTTOM LEFT BOX (K) && FADE-UP STYLING  -->
       <div class="item--k" data-aos="fade-up" data-aos-delay="600">
         <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
-        <figure class="imghvr-fade">
+        <figure  class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
           <img style="height: 100%; width: 100%;" src="./images/project-seed.png">
           <figcaption style="background-color:#f5f5f5; color: black;">
-            <h3 style="
-              font-size: 20pt;
-              color: black;
-              text-align: center;">Project Seed</h3>
-            <br>
-            <p style="
-              font-size: 16pt;
-              color: black;
-              text-align: center;">Knowledge sharing platform </p>
-            <p style="
-              font-weight: bold;
-              font-size: 16pt;
-              color: black;
-              text-align: center;"> React.js, MongoDB, Express.js, Router, Redux</p>
+            <h3 class="projects__container__content__h3">Project Seed</h3>
+            <p class="projects__container__content__p"> React.js, MongoDB, Express.js, Router, Redux</p>
           </figcaption>
           <a href="https://github.com/MarkHinojosa/project-seed" style="object-fit: contain; height: 100%;"></a>
         </figure>
       </div>
     </div>
   </section>
-  </div>
+  <!-- CONTACT FORM -->
+  <section class="contact">
+      <a name="contactAnchor"></a>
+      <div class="about__box">
+        <div class="text--black about__header" data-aos="fade-right" data-aos-anchor-placement="top-bottom">Contact
+        </div>
+      </div>
+      <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
+      <p class="contact__text">Inquiries and Collaborations</p>
+    <form class="submission-form" method="POST" action="https://formspree.io/markhinojosa1212@gmail.com">
+      <br>
+      <input style="display: block; height: 10%; width: 100%; padding: 0;" type="email" name="email" placeholder="Your email">
+      <br>
+      <textarea  style="display: block; width: 100%; height: 60%; padding: 0;" name="message" placeholder="Your message"></textarea>
+      <button style="display: block;"  type="submit">Send</button>
+    </form>
+  </section>
+</div>
   </div>
   <script src="plugins/aos/aos.js "></script>
   <script type="text/javascript ">
