edited to fix scroll issues

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         <img data-aos="fade-right" data-aos-delay="400" data-aos-offset "160" class="mypic" src="./images/editedme.jpg" alt="mypic">
       </div>
       <div class="item--f">
-        <h3 data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="about__container_bio__title text__h3--black">Who is Mark?</h3>
+        <h3 data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="about__container_bio__title text__h3--black about__container_bio__title text__h3">Who is Mark?</h3>
         <p data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="about__container_bio__paragraph text--black">
           A MERN Full-Stack Web Developer who has a passion for building new digital products. I am constantly excited when I learn
           how to use new tools because of the possibilities it unlocks for me. I love sharing my knowledge and knowing that
-          I have saved somebody on my team time and struggle. My greatest goal in life is to contribute to a project that
+          I have saved somebody on my team time and struggle. My greatest goal is to contribute to a project that
           enhances peoples lives across the world. </p>
       </div>
     </div>
