edited styling for mobile

--- a/index.html
+++ b/index.html
@@ -215,6 +215,20 @@
       <button style="display: block;"  type="submit">Send</button>
     </form>
   </section>
+  <section class="footer">
+      <!-- right grid section of navbar contains icons within -->
+      <div>
+        <a class="icons" href="https://gitlab.com/mark_hinojosa">
+          <img src="./images/gitlab.png" alt="" class="footer__gitLab__icon">
+        </a>
+        <a class="icons" href="https://github.com/MarkHinojosa">
+          <img src="./images/github.png" alt="" class="footer__gitHub__icon">
+        </a>
+        <a class="icon__anchor icons" href="https://www.linkedin.com/in/mark-hinojosa-78a181147/">
+          <img src="./images/linkedin.png" alt="" class="footer__linkedin__icon">
+        </a>
+      </div>
+  </section>
 </div>
   </div>
   <script src="plugins/aos/aos.js "></script>
