--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       </div>
       <hr class="header__underline" data-aos="fade-right" data-aos-anchor-placement="top-center">
       <p  data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="contact__text">Inquiries and Collaborations</p>
-    <form data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="1800" class="submission-form" method="POST" action="https://formspree.io/mark@fullstackdevatx.com">
+    <form data-aos="zoom-in-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom" data-aos-duration="1800" class="submission-form" method="POST" action="https://formspree.io/mark@fullstackdevatx.com">
       <br>
       <input style="display: block; height: 10%; width: 100%; padding: 0;" type="email" name="email" placeholder="Your email">
       <br>
