--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </form>
   </section>
   <section class="footer">
-      <!-- right grid section of navbar contains icons within  -->
+      <!-- right grid section of navbar contains icons withi  -->
       <div>
         <a class="icons" href="https://gitlab.com/mark_hinojosa">
           <img src="./images/gitlab.png" alt="" class="footer__gitLab__icon">
