edited email address

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<!-- FOR ANY QUESTIONS OR COLLABORATIONS PLEASE CONTACT ME AT MARKHINOJOSA1212@GMAIL.COM  -->
+<!-- FOR ANY QUESTIONS PLEASE CONTACT ME AT mark@fullstackdevatx.com  -->
 
 <head>
   <meta charset="utf-8" />
