made changes to works displayed

--- a/index.html
+++ b/index.html
@@ -151,6 +151,34 @@
       <!-- ENTIRE TOP LEFT BOX (H) && FADE-UP STYLING  -->
       <div class="item--h" data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-center">
         <!-- CONTENT OF TOP LEFT BOX && HOVER STYLING -->
+
+        <figure  class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
+          <img style="height: 100%; width: 100%;" src="./images/hercScreenshot.png">
+          <figcaption style="background-color:#f5f5f5; color: black;">
+            <h3 class="projects__container__content__h3">Herc.One</h3>
+            <p class="projects__container__content__p">React-Native, React-Redux, Ethereum, Node.js</p>
+          </figcaption>
+          <a href="https://herc.one/get-started" style="object-fit: contain; height: 100%;"></a>
+        </figure>
+
+
+
+      </div>
+      <!-- ENTIRE TOP RIGHT BOX (I) && FADE-UP STYLING  -->
+      <div class="item--i" data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="top-center">
+        <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
+        <figure class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
+          <img style="height: 100%; width: 100%; background-color:#f5f5f5; color: black;" src="./images/motorcycleParksScreenshot.png">
+          <figcaption style="background-color:#f5f5f5; color: black;">
+            <h3 class="projects__container__content__h3">Motorcycle Parks</h3>
+            <p class="projects__container__content__p">React, Leaflet</p>
+          </figcaption>
+          <a href="https://motorcycle-parks.herokuapp.com/" style="object-fit: contain; height: 100%;"></a>
+        </figure>
+      </div>
+      <!-- ENTIRE BOTTOM LEFT BOX (J) && FADE-UP STYLING  -->
+      <div class="item--j" data-aos="fade-up" data-aos-delay="500">
+        <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
         <figure class="imghvr-fade" style="height: 100%; width: 100%;">
           <img style="height: 100%; width: 100%;" src="./images/memoryMatch.png">
           <figcaption style="background-color:#f5f5f5; color: black;">
@@ -158,30 +186,6 @@
             <p class="projects__container__content__p">React.js, Semantic-UI</p>
           </figcaption>
           <a href="https://markhinojosa.github.io/Big-Kahuna/" style="object-fit: contain; height: 100%;"></a>
-        </figure>
-      </div>
-      <!-- ENTIRE TOP RIGHT BOX (I) && FADE-UP STYLING  -->
-      <div class="item--i" data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="top-center">
-        <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
-        <figure class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
-          <img style="height: 100%; width: 100%; background-color:#f5f5f5; color: black;" src="./images/blog.png">
-          <figcaption style="background-color:#f5f5f5; color: black;">
-            <h3 class="projects__container__content__h3">My Blog</h3>
-            <p class="projects__container__content__p">HTML, CSS</p>
-          </figcaption>
-          <a href="https://markhinojosa.github.io/web-workbook/02week/blog/index.html" style="object-fit: contain; height: 100%;"></a>
-        </figure>
-      </div>
-      <!-- ENTIRE BOTTOM LEFT BOX (J) && FADE-UP STYLING  -->
-      <div class="item--j" data-aos="fade-up" data-aos-delay="500">
-        <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
-        <figure  class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
-          <img style="height: 100%; width: 100%;" src="./images/fate.png">
-          <figcaption style="background-color:#f5f5f5; color: black;">
-            <h3 class="projects__container__content__h3">Boy's Fate</h3>
-            <p class="projects__container__content__p">HTML, CSS</p>
-          </figcaption>
-          <a href="https://raceofrobots.github.io/#A" style="object-fit: contain; height: 100%;"></a>
         </figure>
       </div>
       <!-- ENTIRE BOTTOM LEFT BOX (K) && FADE-UP STYLING  -->
