added chat app to center bottom box and modified text in about me

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="#navAnchor">
             <div class="splash__button">
               <div class="splash__button__text">
-                View my work
+                Lets dive in!
               </div>
               <div id="arrow" class="splash__button__arrow">-></div>
             </div>
@@ -131,9 +131,11 @@
       <div class="item--f">
         <h3 data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="about__container_bio__title text__h3--black about__container_bio__title text__h3">Who is Mark?</h3>
         <p data-aos="fade-left" data-aos-delay="400" data-aos-offset "160" class="about__container_bio__paragraph text--black">
-          A MERN Full-Stack Web Developer who has a passion for building new digital products. I am constantly excited when I learn
-          how to use new tools because of the possibilities it unlocks for me. I love sharing my knowledge and knowing that
-          I have saved somebody on my team time and struggle. My greatest goal is to contribute to a project that
+          A MERN Full-Stack Web Developer who has a passion for building new digital products.
+          Commited to a lifelong of learning, I have a passion for growing my list of skills.
+          I love sharing my knowledge. It feels great knowing that
+          I have saved somebody on my team time and struggle, aswell as empowered them with a new skill. 
+          My greatest goal is to contribute to a project that
           enhances peoples lives across the world. </p>
       </div>
     </div>
@@ -149,7 +151,7 @@
     <!-- PROJECTS GRID CONTAINER -->
     <div class="projects__container">
       <!-- ENTIRE TOP LEFT BOX (H) && FADE-UP STYLING  -->
-      <div class="item--h" data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-center">
+      <div class="item--h projectsBorder" data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-center">
         <!-- CONTENT OF TOP LEFT BOX && HOVER STYLING -->
 
         <figure  class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
@@ -165,7 +167,7 @@
 
       </div>
       <!-- ENTIRE TOP RIGHT BOX (I) && FADE-UP STYLING  -->
-      <div class="item--i" data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="top-center">
+      <div class="item--i projectsBorder" data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="top-center">
         <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
         <figure class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
           <img style="height: 100%; width: 100%; background-color:#f5f5f5; color: black;" src="./images/motorcycleParksScreenshot.png">
@@ -177,7 +179,7 @@
         </figure>
       </div>
       <!-- ENTIRE BOTTOM LEFT BOX (J) && FADE-UP STYLING  -->
-      <div class="item--j" data-aos="fade-up" data-aos-delay="500">
+      <div class="item--j projectsBorder" data-aos="fade-up" data-aos-delay="500">
         <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
         <figure class="imghvr-fade" style="height: 100%; width: 100%;">
           <img style="height: 100%; width: 100%;" src="./images/memoryMatch.png">
@@ -189,7 +191,7 @@
         </figure>
       </div>
       <!-- ENTIRE BOTTOM LEFT BOX (K) && FADE-UP STYLING  -->
-      <div class="item--k" data-aos="fade-up" data-aos-delay="600">
+      <div class="item--k projectsBorder" data-aos="fade-up" data-aos-delay="600">
         <!-- CONTENT OF TOP RIGHT BOX && HOVER STYLING -->
         <figure  class="imghvr-fade" style="height: 100%; width: 100%;background-color:#f5f5f5; color: black;">
           <img style="height: 100%; width: 100%;" src="./images/project-seed.png">
@@ -198,6 +200,28 @@
             <p class="projects__container__content__p"> React.js, MongoDB, Express.js, Router, Redux</p>
           </figcaption>
           <a href="https://github.com/MarkHinojosa/project-seed" style="object-fit: contain; height: 100%;"></a>
+        </figure>
+      </div>
+       <!-- CONTENT OF BOTTOM MIDDLE BOX -->
+      <div class="item--l projectsBorder" data-aos="fade-up" data-aos-delay="750">
+        <figure class="imghvr-fade" style="height: 100%; width: 100%;">
+          <img style="height: 100%; width: 100%;" src="./images/chatApp.png">
+          <figcaption style="background-color:#f5f5f5; color: black;">
+            <h3 class="projects__container__content__h3">Chat App</h3>
+            <p class="projects__container__content__p">React.js, Node.js, Express, Pusher </p>
+          </figcaption>
+          <a href="https://hungry-rosalind-aebd74.netlify.com" style="object-fit: contain; height: 100%;"></a>
+        </figure>
+      </div>
+       <!-- CONTENT OF BOTTOM RIGHT BOX -->
+      <div class="item--m projectsBorder" data-aos="fade-up" data-aos-delay="850">
+        <figure class="imghvr-fade" style="height: 100%; width: 100%;">
+          <img style="height: 100%; width: 100%;" src="./images/youtubeCloneSnapshot.png">
+          <figcaption style="background-color:#f5f5f5; color: black;">
+            <h3 class="projects__container__content__h3">Youtube Clone</h3>
+            <p class="projects__container__content__p">React.js, Material UI, Youtube API</p>
+          </figcaption>
+          <a href="https://git.heroku.com/youtube-clone-mh.git" style="object-fit: contain; height: 100%;"></a>
         </figure>
       </div>
     </div>
