--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <img style="height: 100%; width: 100%;" src="./images/youtubeCloneSnapshot.png">
           <figcaption style="background-color:#f5f5f5; color: black;">
             <h3 class="projects__container__content__h3">Youtube Clone</h3>
-            <p class="projects__container__content__p">React.js, Material UI, Youtube API *load unsafe scripts*</p>
+            <p class="projects__container__content__p">React.js, Material UI, Youtube API *please allow unsafe scripts*</p>
           </figcaption>
           <a href="https://youtube-clone-mh.herokuapp.com/" style="object-fit: contain; height: 100%;"></a>
         </figure>
